<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alivc_dialog_error_bg">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/alivc_common_padding_20"
        android:src="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/alivc_common_margin_5"
            android:layout_marginRight="@dimen/alivc_common_margin_5"
            android:singleLine="true"
            android:text="@string/alivc_error_msg"
            android:textColor="@color/alivc_common_font_white_light"
            android:textSize="@dimen/alivc_common_font_14" />

        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/alivc_error_code"
            android:textColor="@color/alivc_common_font_white_light"
            android:textSize="@dimen/alivc_common_font_14" />

        <RelativeLayout
            android:id="@+id/retry"
            android:layout_width="@dimen/alivc_common_width_group_82"
            android:layout_height="@dimen/alivc_common_height_group_30"
            android:layout_marginTop="@dimen/alivc_common_margin_16"
            android:background="@drawable/alivc_rr_bg_blue">

            <TextView
                android:id="@+id/retry_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/alivc_refresh_blue"
                android:drawablePadding="@dimen/alivc_common_padding_5"
                android:gravity="center"
                android:text="@string/alivc_retry"
                android:textColor="@color/alivc_player_theme_blue"
                android:textSize="@dimen/alivc_common_font_15" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>