<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alivc_dialog_error_bg">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/alivc_common_padding_20"
        android:src="@drawable/ic_back" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/alivc_net_state_mobile"
            android:textColor="@color/alivc_common_font_white_light"
            android:textSize="@dimen/alivc_common_font_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alivc_common_margin_16"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/continue_play"
                android:layout_width="@dimen/alivc_common_width_group_82"
                android:layout_height="@dimen/alivc_common_height_group_30"
                android:background="@drawable/alivc_rr_bg_white"
                android:gravity="center"
                android:text="@string/alivc_net_state_mobile_yes"
                android:textColor="@color/alivc_common_font_white_light"
                android:textSize="@dimen/alivc_common_font_15" />

            <TextView
                android:id="@+id/stop_play"
                android:layout_width="@dimen/alivc_common_width_group_82"
                android:layout_height="@dimen/alivc_common_height_group_30"
                android:layout_marginLeft="@dimen/alivc_common_margin_30"
                android:background="@drawable/alivc_rr_bg_blue"
                android:gravity="center"
                android:text="@string/alivc_net_state_mobile_no"
                android:textColor="@color/alivc_common_font_cyan_light"
                android:textSize="@dimen/alivc_common_font_15" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>